--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,30 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowAnimationStyle">@style/BookTheme.AnimaActivity</item>
+    </style>
+    <style name="BookTheme.AnimaActivity">
+        <item name="android:activityOpenEnterAnimation">@anim/translate_right_to_center</item>
+        <item name="android:activityOpenExitAnimation">@anim/translate_center_to_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/translate_left_to_center</item>
+        <item name="android:activityCloseExitAnimation">@anim/translate_center_to_right</item>
     </style>
 
+    <!--ToolBar-->
+    <style name="BookTheme.ToolBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <!--toolbar字体颜色（同时会改变menu三点和返回按键颜色）-->
+        <item name="android:textColorPrimary">@color/action_text_color</item>
+        <item name="android:background">@color/theme_color</item>
+    </style>
+    <style name="BookTheme.ToolBar.PopupMenu" parent="Theme.AppCompat.Light.NoActionBar">
+        <!--文字的颜色-->
+        <item name="android:textColor">@color/action_pop_text_color</item>
+        <!--不覆盖toolbar-->
+        <item name="overlapAnchor">false</item>
+    </style>
+    <style name="BookTheme.ToolBar.Title" parent="BookTheme.ToolBar">
+        <item name="android:textSize">@dimen/actionBarTextSize</item>
+        <item name="android:textColor">@color/action_text_color</item>
+        <item name="android:textStyle">normal</item>
+    </style>
 </resources>
