--- a/app/src/main/res/layout/view_source_tag.xml
+++ b/app/src/main/res/layout/view_source_tag.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:text="示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例"
-    android:paddingBottom="2dp"
-    android:paddingTop="2dp"
-    android:maxLength="20"
-    android:maxLines="1"
-    android:ellipsize="end"
-    android:paddingLeft="@dimen/dp_5"
-    android:paddingRight="@dimen/dp_5"
-    android:textColor="@android:color/white"
-    android:textSize="@dimen/text_normal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_theme"/>
+    android:background="@drawable/shape_theme"
+    android:ellipsize="end"
+    android:maxLength="20"
+    android:maxLines="1"
+    android:paddingLeft="@dimen/dp_5"
+    android:paddingTop="@dimen/dp_2"
+    android:paddingRight="@dimen/dp_5"
+    android:paddingBottom="@dimen/dp_2"
+    android:textColor="@android:color/white"
+    android:textSize="@dimen/text_normal"
+    tools:text="@string/test" />
