--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,10 @@
 <resources>
 
     <!--dp-->
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_3">3dp</dimen>
+    <dimen name="dp_4">4dp</dimen>
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_15">15dp</dimen>
@@ -9,6 +13,8 @@
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_35">35dp</dimen>
+    <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
     <dimen name="divider">1dp</dimen>
     <dimen name="actionBarSize">50dp</dimen>
 
