--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <declare-styleable name="Loading">
+        <attr name="loading_text" format="string"/>
+        <attr name="loading_text_size" format="integer"/>
+        <attr name="loading_text_color" format="color"/>
+        <attr name="loading_stroke_color" format="color"/>
+        <attr name="loading_solid_color" format="color"/>
+    </declare-styleable>
+
     <declare-styleable name="TagFlowLayout">
         <attr name="max_select" format="integer"></attr>
         <attr name="tag_gravity">
