--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -1,51 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="1dp"
     tools:context=".mvp.ui.activity.IndexActivity">
 
-    <include
-        layout="@layout/layout_tool_bar"/>
+    <include layout="@layout/layout_tool_bar" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_20"
+        android:gravity="center"
+        android:text="@string/test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/ll_tab"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:background="@color/app_background_light"
         android:layout_width="match_parent"
         android:layout_height="@dimen/index_icon_height"
+        android:background="@color/app_background_light"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
+
         <ImageView
             android:id="@+id/iv_main"
-            android:src="@mipmap/ic_card"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
             android:padding="3dp"
-            android:background="?selectableItemBackground"/>
+            android:src="@mipmap/ic_card" />
+
         <ImageView
             android:id="@+id/iv_table"
-            android:src="@mipmap/ic_card"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
             android:padding="3dp"
-            android:background="?selectableItemBackground"/>
+            android:src="@mipmap/ic_card" />
+
         <ImageView
             android:id="@+id/iv_me"
-            android:src="@mipmap/ic_card"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?selectableItemBackground"
             android:padding="3dp"
-            android:background="?selectableItemBackground"/>
+            android:src="@mipmap/ic_card" />
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/app_line_light"
-        app:layout_constraintTop_toTopOf="@+id/ll_tab"/>
+        app:layout_constraintTop_toTopOf="@+id/ll_tab" />
 </androidx.constraintlayout.widget.ConstraintLayout>
