update common lib

--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -1,73 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="1dp"
+    android:clickable="true"
     tools:context=".mvp.ui.activity.IndexActivity">
 
-    <include layout="@layout/layout_tool_bar" />
-
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_20"
-        android:gravity="center"
-        android:text="@string/test"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:elevation="1dp">
 
-    <LinearLayout
-        android:id="@+id/ll_tab"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/index_icon_height"
-        android:background="@color/app_background_light"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/vp_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/ll_tab"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="1" />
 
-        <ImageView
-            android:id="@+id/iv_main"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?selectableItemBackground"
-            android:padding="3dp"
-            android:src="@mipmap/ic_card" />
+        <LinearLayout
+            android:id="@+id/ll_tab"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/index_icon_height"
+            android:background="@color/app_background_light"
+            android:elevation="@dimen/dp_3"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vp_pager">
 
-        <ImageView
-            android:id="@+id/iv_table"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?selectableItemBackground"
-            android:padding="3dp"
-            android:src="@mipmap/ic_card" />
+            <com.sung.bookexchange.view.HomeTabLayout
+                android:id="@+id/htl_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:tab_icons="@array/home_tab_icons"
+                app:tab_titles="@array/home_tab_titles" />
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/iv_me"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?selectableItemBackground"
-            android:padding="3dp"
-            android:src="@mipmap/ic_card" />
-    </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/app_line_light"
+            app:layout_constraintTop_toTopOf="@+id/ll_tab" />
 
-    <Button
-        android:id="@+id/btn_about"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_20"
-        android:text="@string/app_name"
-        app:layout_constraintBottom_toTopOf="@id/ll_tab"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/app_line_light"
-        app:layout_constraintTop_toTopOf="@+id/ll_tab" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--必须放在主布局下面否则任何触控都响应不到-->
+    <include
+        android:id="@+id/nv_navigation"
+        layout="@layout/layout_drawer_nav_header_base"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        android:scrollbars="none" />
+</androidx.drawerlayout.widget.DrawerLayout>
