--- a/app/src/main/res/layout/view_source_tag.xml
+++ b/app/src/main/res/layout/view_source_tag.xml
@@ -13,4 +13,4 @@
     android:paddingBottom="@dimen/dp_2"
     android:textColor="@android:color/white"
     android:textSize="@dimen/text_normal"
-    tools:text="@string/test" />
+    tools:text="@string/sys_test" />
