--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--流式标签-->
     <declare-styleable name="TagFlowLayout">
         <attr name="max_select" format="integer"></attr>
         <attr name="tag_gravity">
@@ -7,5 +8,11 @@
             <enum name="center" value="0" />
             <enum name="right" value="1" />
         </attr>
+    </declare-styleable>
+
+    <!--tab控件-->
+    <declare-styleable name="HomeTabLayout">
+        <attr name="tab_icons" format="reference|integer" />
+        <attr name="tab_titles" format="reference|integer" />
     </declare-styleable>
 </resources>
