--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,13 +13,15 @@
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_35">35dp</dimen>
+    <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
+    <dimen name="dp_250">250dp</dimen>
     <dimen name="divider">1dp</dimen>
     <dimen name="actionBarSize">50dp</dimen>
 
-    <dimen name="index_icon_height">45dp
-    </dimen>
+    <dimen name="index_icon_height">50dp</dimen>
 
     <!--sp-->
     <dimen name="text_small">12sp</dimen>
@@ -28,6 +30,22 @@
     <dimen name="text_xlarge">20sp</dimen>
     <dimen name="text_xxlarge">22sp</dimen>
     <dimen name="text_xxxlarge">25sp</dimen>
-    <dimen name="actionBarTextSize">@dimen/text_xxlarge</dimen>
+    <dimen name="actionBarTextSize">24sp</dimen>
+
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_13">13sp</dimen>
+    <dimen name="sp_14">14sp</dimen>
+    <dimen name="sp_15">15sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_20">20sp</dimen>
+    <dimen name="sp_22">22sp</dimen>
+    <dimen name="sp_24">24sp</dimen>
+    <dimen name="sp_26">26sp</dimen>
+    <dimen name="sp_28">28sp</dimen>
+    <dimen name="sp_30">30sp</dimen>
+    <dimen name="sp_32">32sp</dimen>
+    <dimen name="sp_35">35sp</dimen>
+    <dimen name="sp_40">40sp</dimen>
 
 </resources>
