--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="BookTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -37,5 +37,11 @@
         <item name="android:textSize">@dimen/actionBarTextSize</item>
         <item name="android:textColor">@color/app_text_light</item>
         <item name="android:textStyle">normal</item>
+    </style>
+    <style name="BookTheme.EditText" parent="Theme.AppCompat.Light">
+        <item name="android:colorControlNormal" tools:targetApi="lollipop">@android:color/darker_gray</item>
+        <item name="android:colorControlActivated" tools:targetApi="lollipop">@android:color/darker_gray</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/text_normal</item>
     </style>
 </resources>
