--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -16,4 +16,16 @@
             <enum name="right" value="1" />
         </attr>
     </declare-styleable>
+
+    <!--//垂直滚动字幕-->
+    <declare-styleable name="VerticalRollingTextView">
+        <!--两次动画之间的间隔-->
+        <attr name="animInterval" format="integer"/>
+        <!--展示条目的个数-->
+        <attr name="itemCount" format="integer"/>
+        <!--多行显示时自适应文字的最大文字大小-->
+        <attr name="maxTextSize" format="dimension"/>
+        <!--多行显示时自适应文字的最小文字大小-->
+        <attr name="minTextSize" format="dimension"/>
+    </declare-styleable>
 </resources>
