--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <include layout="@layout/layout_tool_bar" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -32,4 +33,11 @@
             android:gravity="center"
             tools:text="@string/app_des" />
     </LinearLayout>
+    <me.xfans.lib.voicewaveview.VoiceWaveView
+        android:id="@+id/voiceWaveView"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        app:lineColor="@color/colorPrimary"
+        app:waveMode="left_right"
+        android:gravity="center" />
 </LinearLayout>
