--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -40,4 +40,29 @@
         app:lineColor="@color/colorPrimary"
         app:waveMode="left_right"
         android:gravity="center" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.sung.uikit.widget.Loading
+            android:id="@+id/loading"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"/>
+        <com.sung.uikit.widget.Loading
+            android:id="@+id/loading1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"/>
+        <com.sung.uikit.widget.Loading
+            android:id="@+id/loading2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"/>
+        <com.sung.uikit.widget.Loading
+            android:id="@+id/loading3"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
 </LinearLayout>
