--- a/common/src/main/res/layout/layout_cutom_dialog.xml
+++ b/common/src/main/res/layout/layout_cutom_dialog.xml
@@ -10,22 +10,28 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
         android:gravity="center"
+        android:padding="@dimen/dp_10"
         android:textSize="16sp"
         android:textStyle="bold"
         tools:text="这是提醒标题" />
 
-    <TextView
-        android:id="@+id/tv_content"
+    <RelativeLayout
+        android:id="@+id/rl_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_5"
-        android:layout_marginBottom="@dimen/dp_10"
-        android:gravity="center"
-        android:padding="@dimen/dp_20"
-        android:textColor="#000000"
-        tools:text="这是内容文本" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:gravity="center"
+            android:padding="@dimen/dp_20"
+            android:textColor="#000000"
+            tools:text="这是内容文本" />
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -34,6 +40,7 @@
         android:background="#eeeeee" />
 
     <LinearLayout
+        android:id="@+id/ll_action_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_35">
 
