--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -18,7 +18,11 @@
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_55">55dp</dimen>
     <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_150">150dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
     <dimen name="divider">1dp</dimen>
     <dimen name="actionBarSize">50dp</dimen>
 
